--- a/_config.yml
+++ b/_config.yml
@@ -18,16 +18,14 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: 홍은기 ❤️ 이정민 결혼식에 초대합니다
+email: h.pichulia@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  홍은기 ❤️ 이정민 결혼식에 초대합니다. 2024년 7월 13일 토요일 오후 1시 삼성전자 서초 사옥 웨딩홀 5층!
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "https://hinohie.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: pichulia
+github_username: hinohie
 
 # Build settings
 theme: minima
